config home update

--- a/_config.yml
+++ b/_config.yml
@@ -122,9 +122,9 @@ favicons: # Favicons are also used in the manifest file. Syntax is 'size: path'
 # 9. Site navigation
 navigation_header:
 - title: Home
-  url: /
-- title: Projects
   url: /projects/
+# - title: Projects
+#   url: /projects/
 - title: Blog
   url: /blog/
 # - title: Categories
